# chroncile.saas.platform

./: .env.example  .gitignore  CHANGELOG.md  GETTING_STARTED.md  Makefile  README.md  docker-compose.yml  doppler.yaml  eslint.config.mjs  package.json  turbo.json
.github/workflows/: ci.yml  daytona-world-e2e.yml
apps/env-manager/: .env.example  package.json
apps/env-manager/app/dashboard/: page.tsx
apps/env-manager/components/layout/: sidebar.tsx
apps/env-manager/components/ui/: branch-picker.tsx  metric-chart.tsx
apps/env-manager/lib/: backend-client.ts  email.ts  fly-client.ts  k6-client.ts  lifecycle.ts  permanent-envs.ts  sync.ts  types.ts  vercel-client.ts
apps/env-manager/prisma/: schema.prisma
apps/env-manager/scripts/: test-k6-integration.mts  test-provision.mts
apps/frontend/: .env.example  README.md  instrumentation-client.ts  middleware.ts  next.config.ts  package.json  proxy.ts  vercel.json
apps/frontend/app/: globals.css  layout.tsx  providers.tsx
apps/frontend/app/(auth)/: layout.tsx
apps/frontend/app/(dashboard)/: layout.tsx
apps/frontend/app/dashboard/: layout.tsx  page.tsx
apps/frontend/app/forgot-password/: page.tsx
apps/frontend/app/login/: page.tsx
apps/frontend/app/reset-password/: page.tsx
apps/frontend/app/signup/: page.tsx
apps/frontend/components/: company-logo.tsx
apps/frontend/components/connections/: AddEventSourcesModal.tsx
apps/frontend/components/layout/: header.tsx  sidebar.tsx
apps/frontend/components/settings/: AgentEndpointPanel.tsx  PlanBillingPanel.tsx
apps/frontend/config/: plans.json
apps/frontend/lib/: agent-endpoint.ts  api-client.ts  audit-log.ts  auth.config.ts  auth.ts  backend-proxy.ts  backend.ts  db.ts  email-actions.ts  events-manager-sse.ts  events-manager.ts  pipedream-webhook-handler.ts  pipedream.ts  plans.ts  platform-api.ts  utils.ts  validations.ts
apps/frontend/prisma/: schema.prisma
backend/: .dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  env.example  fly.development.toml  fly.staging.toml  fly.toml
backend/.cargo/: config.toml
backend/crates/api/: Cargo.toml
backend/crates/auth/: Cargo.toml
backend/crates/chronicle_world_runtime/: Cargo.toml
backend/crates/chronicle_world_runtime/src/: lib.rs
backend/crates/domain/: Cargo.toml
backend/crates/infra/: Cargo.toml
backend/crates/infra/migrations/: 002_alter_events_timestamps_to_timestamptz.sql
backend/crates/infra/src/: lib.rs
backend/crates/infra/src/memory/: repositories.rs  stream.rs  world_repositories.rs
backend/crates/infra/src/postgres/: mod.rs  repositories.rs  store.rs  world_repositories.rs
backend/crates/infra/src/postgres/migrations/: 001_create_events.sql
backend/crates/integrations/: Cargo.toml
backend/crates/interfaces/: Cargo.toml
backend/crates/interfaces/src/: clock.rs  lib.rs  repositories.rs  streaming.rs
backend/crates/mock-connector/: Cargo.toml
backend/crates/mock-connector/src/: lib.rs
backend/crates/pipedream-connect/: Cargo.toml
backend/crates/source-intercom/: Cargo.toml
backend/crates/source-mock-stripe/: Cargo.toml
backend/crates/source-mock-stripe/src/: adapter.rs
backend/crates/sources-core/: Cargo.toml
backend/crates/sources-registry/: Cargo.toml
backend/crates/timeline-core/: Cargo.toml
backend/crates/timeline-widget/: Cargo.toml  README.md  build-wasm.sh
backend/crates/ui/: Cargo.toml  README.md  build-web.sh
backend/crates/world_compiler/: Cargo.toml
backend/crates/world_compiler/src/: lib.rs
backend/crates/world_compiler/tests/: http_replay_runtime_e2e.rs
backend/deploy/: fly.development.toml  fly.production.toml  fly.staging.toml
backend/migrations/: 001_create_events.sql  002_create_saas_schema.sql  014_create_world_runtime.sql
backend/sandbox-image/: Dockerfile  chronicle_addon.py  publish-daytona.sh
backend/scripts/: daytona_world_e2e.sh  smoke_world_http_replay_cli.sh  smoke_world_logical_delta_cli.sh
backend/ui/: index.html
benchmarks/tau2/: ingest_tau2_to_chronicle.py  render_benchmark_report.py  summarize_tau2_results.py  tau2_common.py  upstream.json
deploy/: docker-compose.yml
docs/: DOPPLER_SETUP.md  architecture.html  clay-lead-gen-mock-agent-plan.md  getting-started.md  testing-email-escalation.md
e2e/: package.json  playwright.config.ts
e2e/tests/: auth.spec.ts  dashboard.spec.ts
nango-integrations/: index.ts  tsconfig.json
nango-integrations/front/syncs/: front-conversations.ts
nango-integrations/intercom/syncs/: intercom-conversations.ts
scripts/: capture-api-baselines.sh  generate-types.sh  setup-production.sh
(+210 files in other folders)
