[package]
name = "chronicle-mock-connector"
version.workspace = true
edition.workspace = true

[dependencies]
chronicle-domain = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
rand = "0.8"
fake = { version = "2.9", features = ["chrono"] }
