[package]
name = "chronicle-source-mock-stripe"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Mock Stripe source for testing and demos - generates synthetic webhook events"

[dependencies]
# Internal
chronicle-domain = { workspace = true }
chronicle-sources-core = { workspace = true }
chronicle-sources-registry = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time and IDs
chrono = { workspace = true }
ulid = { workspace = true }

# Random generation
rand = { workspace = true }

# Logging
tracing = { workspace = true }

# Versioning
semver = { version = "1.0", features = ["serde"] }

# Registry
inventory = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

